filled the index page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header class="top">
+        <h1 class="top__title">Добро пожаловать на мой сайт мини-игр</h1>
+        <p class="top__subtitle">Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай «Поехали!» и приступай.</p>
+        <button class="top__btn">Поехали!</button>
+        <nav></nav>
+    </header>
+    <main class="main">
+        <section class="about">
+            <h2 class="about__title">Об играх</h2>
+            <p class="about__subtitle">В моей коллекции представлено 6 игр на разные темы.Игры несложные — в них может поиграть каждый.
+                Все игры доступны для пользования.</p>
+            <div class="games">
+                <article class="game">
+                    <img class="game__img" src="images/1.jpg" alt="img">
+                    <p class="game__number">Игра № 1</p>
+                    <h3 class="game__name">Угадай число</h3>
+                </article>
+                <article class="game">
+                    <img class="game__img" src="images/2.jpg" alt="img">
+                    <p class="game__number">Игра № 2</p>
+                    <h3 class="game__name">Простая арифметика</h3>
+                </article>
+                <article class="game">
+                    <img class="game__img" src="images/3.jpg" alt="img">
+                    <p class="game__number">Игра № 3</p>
+                    <h3 class="game__name">Переверни текст</h3>
+                </article>
+                <article class="game">
+                    <img class="game__img" src="images/4.jpg" alt="img">
+                    <p class="game__number">Игра № 4</p>
+                    <h3 class="game__name">Камень, ножницы, бумага</h3>
+                </article>
+                <article class="game">
+                    <img class="game__img" src="images/5.jpg" alt="img">
+                    <p class="game__number">Игра № 5</p>
+                    <h3 class="game__name">Простая викторина</h3>
+                </article>
+                <article class="game">
+                    <img class="game__img" src="images/6.jpg" alt="img">
+                    <p class="game__number">Игра № 6</p>
+                    <h3 class="game__name">Генератор случайных цветов</h3>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <p class="footer__text">Все права защищены.</p>
+    </footer>
 </body>
 </html>
