added anchor link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="top center">
         <h1 class="top__title">Добро пожаловать<br> на мой сайт мини-игр</h1>
         <p class="top__subtitle">Тебе предстоит пройти несколько увлекательных игр. <br>Если готов, нажимай <span class="top__subtitle_bold">«Поехали!»</span> и <span class="top__subtitle_bold">приступай.</span></p>
-        <button class="top__btn">Поехали!</button>
+        <a href="#games"><button class="top__btn">Поехали!</button></a>
     </header>
     <nav class="nav"></nav>
     <main class="main">
@@ -21,7 +21,7 @@
             <h2 class="about__title">Об играх</h2>
             <p class="about__subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них может поиграть каждый. <br>
                 Все игры доступны для пользования.</p>
-                <div class="games">
+                <div id="games" class="games">
                     <a href=""><article class="games__item games__item_1">
                         <img class="games__img" src="images/1.png" alt="img">
                         <button class="games__btn">Игра № 1</button>
