added JS and finished first hw

--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
     <footer class="footer">
         <p class="footer__text">Все права защищены.</p>
     </footer>
+    <script src="hw-1.js"></script>
 </body>
 </html>
