added anchor links for games

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Все игры доступны для пользования.</p>
 
             <div id="games" class="games ">
-                <article class="game"><a href="">
+                <article class="game"><a href="#1">
                         <img class="game__img" src="images/1.png" alt="img">
                         <p class="game__btn">Игра № 1</p>
                         <h3 class="game__name">Угадай число</h3>
@@ -35,7 +35,7 @@
                         <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
-                <article class="game"><a href="">
+                <article class="game"><a href="#2">
                         <img class="game__img" src="images/2.png" alt="img">
                         <p class="game__btn">Игра № 2</p>
                         <h3 class="game__name">Простая арифметика</h3>
@@ -43,7 +43,7 @@
                         <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
-                <article class="game"><a href="">
+                <article class="game"><a href="#3">
                         <img class="game__img" src="images/3.png" alt="img">
                         <p class="game__btn">Игра № 3</p>
                         <h3 class="game__name">Переверни текст</h3>
@@ -51,7 +51,7 @@
                         <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
-                <article class="game"><a href="">
+                <article class="game"><a href="#4">
                         <img class="game__img" src="images/4.png" alt="img">
                         <p class="game__btn">Игра № 4</p>
                         <h3 class="game__name">Камень,<br> ножницы,<br> бумага</h3>
@@ -59,7 +59,7 @@
                         <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
-                <article class="game"><a href="">
+                <article class="game"><a href="#5">
                         <img class="game__img" src="images/5.png" alt="img">
                         <p class="game__btn">Игра № 5</p>
                         <h3 class="game__name">Простая<br> викторина</h3>
@@ -67,7 +67,7 @@
                         <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
-                <article class="game"><a href="">
+                <article class="game"><a href="#6">
                         <img class="game__img" src="images/6.png" alt="img">
                         <p class="game__btn">Игра № 6</p>
                         <h3 class="game__name">Генератор<br> случайных<br> цветов</h3>
@@ -80,7 +80,7 @@
         <section class="mini-games">
             <h2 class="mini-games__title">Мини-игры</h2>
             <div class="block">
-                <article class="mini-game">
+                <article id="1" class="mini-game">
                     <img class="mini-game__img" src="images/1.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Угадай число</h3>
@@ -89,7 +89,7 @@
                     </div>
                 </article>
 
-                <article class="mini-game">
+                <article id="2" class="mini-game">
                     <img class="mini-game__img" src="images/2.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Простая<br> арифметика</h3>
@@ -98,7 +98,7 @@
                     </div>
                 </article>
 
-                <article class="mini-game">
+                <article id="3" class="mini-game">
                     <img class="mini-game__img" src="images/3.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Переверни текст</h3>
@@ -107,7 +107,7 @@
                     </div>
                 </article>
 
-                <article class="mini-game">
+                <article id="4" class="mini-game">
                     <img class="mini-game__img" src="images/4.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Камень,<br> ножницы,<br> бумага</h3>
@@ -116,7 +116,7 @@
                     </div>
                 </article>
 
-                <article class="mini-game">
+                <article id="5" class="mini-game">
                     <img class="mini-game__img" src="images/5.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Простая<br> викторина</h3>
@@ -125,7 +125,7 @@
                     </div>
                 </article>
 
-                <article class="mini-game">
+                <article id="6" class="mini-game">
                     <img class="mini-game__img" src="images/6.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Генератор<br> случайных<br> цветов</h3>
