--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         <p class="footer__text">Все права защищены.</p>
     </footer>
     <script src="hw-1.js"></script>
+    <script src="hw-2.js"></script>
 </body>
 
 </html>
