added file hw-4js

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <script src="hw-1.js"></script>
     <script src="hw-2.js"></script>
     <script src="hw-3.js"></script>
+    <script src="hw-4.js"></script>
     <script src="guess-number.js"></script>
-
 </body>
 
 </html>
