added a second game

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Простая<br> арифметика</h3>
                         <p class="mini-game__desc">Попробуй решить простые<br> арифметические задачи.</p>
-                        <button class="mini-game__mob-btn">Играть!</button>
+                        <button onclick="mathGame()" class="mini-game__mob-btn">Играть!</button>
                     </div>
                 </article>
 
@@ -146,6 +146,7 @@
     <script src="hw-3.js"></script>
     <script src="hw-4.js"></script>
     <script src="guess-number.js"></script>
+    <script src="mathgame.js"></script>
 </body>
 
 </html>
