--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     <script src="hw-2.js"></script>
     <script src="hw-3.js"></script>
     <script src="hw-4.js"></script>
+    <script src="hw-5.js"></script>
     <script src="guess-number.js"></script>
     <script src="mathgame.js"></script>
 </body>
