added a new game reverse text

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Переверни текст</h3>
                         <p class="mini-game__desc">Попробуй ввести текст, который<br> будет перевернут.</p>
-                        <button class="mini-game__mob-btn">Играть!</button>
+                        <button onclick="reverseTextGame()" class="mini-game__mob-btn">Играть!</button>
                     </div>
                 </article>
 
@@ -148,6 +148,7 @@
     <script src="hw-5.js"></script>
     <script src="guess-number.js"></script>
     <script src="mathgame.js"></script>
+    <script src="reversedTextGame.js"></script>
 </body>
 
 </html>
