added quiz game

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Простая<br> викторина</h3>
                         <p class="mini-game__desc">Отвечай на вопросы викторины<br> с вариантами ответов.</p>
-                        <button class="mini-game__mob-btn">Играть!</button>
+                        <button onclick="startQuiz()" class="mini-game__mob-btn">Играть!</button>
                     </div>
                 </article>
 
@@ -149,6 +149,7 @@
     <script src="guess-number.js"></script>
     <script src="mathgame.js"></script>
     <script src="reversedTextGame.js"></script>
+    <script src="quizGame.js"></script>
 </body>
 
 </html>
