--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <script src="hw-3.js"></script>
     <script src="hw-4.js"></script>
     <script src="hw-5.js"></script>
+    <script src="hw-6.js"></script>
     <script src="guess-number.js"></script>
     <script src="mathgame.js"></script>
     <script src="reversedTextGame.js"></script>
