--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Камень,<br> ножницы,<br> бумага</h3>
                         <p class="mini-game__desc">Сыграй в популярную игру<br> против компьютера.</p>
-                        <button class="mini-game__mob-btn">Играть!</button>
+                        <button onclick="rspGame()" class="mini-game__mob-btn">Играть!</button>
                     </div>
                 </article>
 
@@ -151,6 +151,7 @@
     <script src="mathgame.js"></script>
     <script src="reversedTextGame.js"></script>
     <script src="quizGame.js"></script>
+    <script src="rockScisorsPaper.js"></script>
 </body>
 
 </html>
