added scrolling text line

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
                 class="top__subtitle_bold">«Поехали!»</span> и <span class="top__subtitle_bold">приступай.</span></p>
         <a class="top__btn" href="#games">Поехали!</a>
     </header>
-    <nav class="nav"></nav>
+    <div class="nav">
+        <span class="nav__text">Викторина <img class="nav__img" src="images/scroll-star.svg" alt="svg">
+            Угадай число <img class="nav__img" src="images/scroll-star.svg" alt="svg">
+            Переверни текст <img class="nav__img" src="images/scroll-star.svg" alt="svg">
+            Простая арифметика <img class="nav__img" src="images/scroll-star.svg" alt="svg">
+            Камень, ножницы, бумага <img class="nav__img" src="images/scroll-star.svg" alt="svg">
+            Генератор случайных цветов <img class="nav__img" src="images/scroll-star.svg" alt="svg">
+        </span>
+    </div>
+
     <main class="main center">
         <section class="about center">
             <h2 class="about__title">Об играх</h2>
