added last game

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <p class="mini-game__desc">Игра, в которой при клике на кнопку<br> фон страницы меняется на
                             случайный.
                         </p>
-                        <button class="mini-game__mob-btn">Играть!</button>
+                        <button id="colorButton" class="mini-game__mob-btn">Играть!</button>
                     </div>
                 </article>
             </div>
@@ -162,6 +162,7 @@
     <script src="reversedTextGame.js"></script>
     <script src="quizGame.js"></script>
     <script src="rockScisorsPaper.js"></script>
+    <script src="randomColor.js"></script>
 </body>
 
 </html>
