fixed some problems

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="top center">
         <h1 class="top__title">Добро пожаловать<br> на мой сайт мини-игр</h1>
-        <p class="top__subtitle">Тебе предстоит пройти несколько увлекательных игр. <br>Если готов, нажимай <span
+        <p class="top__subtitle">Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай <span
                 class="top__subtitle_bold">«Поехали!»</span> и <span class="top__subtitle_bold">приступай.</span></p>
         <a class="top__btn" href="#games">Поехали!</a>
     </header>
@@ -41,7 +41,6 @@
                         <p class="game__btn">Игра № 1</p>
                         <h3 class="game__name">Угадай число</h3>
                         <p class="game__desc">Попробуй угадать случайное число от 1 до 100.</p>
-                        <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
                 <article class="game"><a href="#2">
@@ -49,7 +48,6 @@
                         <p class="game__btn">Игра № 2</p>
                         <h3 class="game__name">Простая арифметика</h3>
                         <p class="game__desc">Попробуй решить простые арифметические задачи.</p>
-                        <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
                 <article class="game"><a href="#3">
@@ -57,7 +55,6 @@
                         <p class="game__btn">Игра № 3</p>
                         <h3 class="game__name">Переверни текст</h3>
                         <p class="game__desc">Попробуй ввести текст, который будет перевернут.</p>
-                        <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
                 <article class="game"><a href="#4">
@@ -65,7 +62,6 @@
                         <p class="game__btn">Игра № 4</p>
                         <h3 class="game__name">Камень,<br> ножницы,<br> бумага</h3>
                         <p class="game__desc">Сыграй в популярную игру против компьютера.</p>
-                        <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
                 <article class="game"><a href="#5">
@@ -73,7 +69,6 @@
                         <p class="game__btn">Игра № 5</p>
                         <h3 class="game__name">Простая<br> викторина</h3>
                         <p class="game__desc">Отвечай на вопросы викториныс вариантами ответов.</p>
-                        <button class="game__mob-btn">Играть!</button>
                     </a></article>
 
                 <article class="game"><a href="#6">
@@ -82,7 +77,6 @@
                         <h3 class="game__name">Генератор<br> случайных<br> цветов</h3>
                         <p class="game__desc">Игра, в которой при клике на кнопку фон страницы меняется на случайный.
                         </p>
-                        <button class="game__mob-btn">Играть!</button>
                     </a></article>
             </div>
         </section>
@@ -119,7 +113,7 @@
                 <article id="5" class="mini-game">
                     <img class="mini-game__img" src="images/5.png" alt="img">
                     <div class="mini-game__info">
-                        <h3 class="mini-game__name">Простая<br> викторина</h3>
+                        <h3 class="mini-game__name">Викторина</h3>
                         <p class="mini-game__desc">Отвечай на вопросы викторины<br> с вариантами ответов.</p>
                         <button onclick="startQuiz()" class="mini-game__mob-btn">Играть!</button>
                     </div>
@@ -138,7 +132,7 @@
                     <img class="mini-game__img" src="images/6.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Генератор<br> случайных<br> цветов</h3>
-                        <p class="mini-game__desc">Игра, в которой при клике на кнопку<br> фон страницы меняется на
+                        <p class="mini-game__desc">Игра, в которой при клике<br class="mini-game__brOne"> на кнопку<br class="mini-game__br"> фон страницы<br class="mini-game__brTwo"> меняется на
                             случайный.
                         </p>
                         <button id="colorButton" class="mini-game__mob-btn">Играть!</button>
