--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <a class="top__btn" href="#games">Поехали!</a>
     </header>
     <div class="nav">
-        <span class="nav__text">Викторина <img class="nav__img" src="images/scroll-star.svg" alt="svg">
+        <span class="nav__text">
+            Викторина <img class="nav__img" src="images/scroll-star.svg" alt="svg">
             Угадай число <img class="nav__img" src="images/scroll-star.svg" alt="svg">
             Переверни текст <img class="nav__img" src="images/scroll-star.svg" alt="svg">
             Простая арифметика <img class="nav__img" src="images/scroll-star.svg" alt="svg">
@@ -132,7 +133,8 @@
                     <img class="mini-game__img" src="images/6.png" alt="img">
                     <div class="mini-game__info">
                         <h3 class="mini-game__name">Генератор<br> случайных<br> цветов</h3>
-                        <p class="mini-game__desc">Игра, в которой при клике<br class="mini-game__brOne"> на кнопку<br class="mini-game__br"> фон страницы<br class="mini-game__brTwo"> меняется на
+                        <p class="mini-game__desc">Игра, в которой при клике<br class="mini-game__brOne"> на кнопку<br
+                                class="mini-game__br"> фон страницы<br class="mini-game__brTwo"> меняется на
                             случайный.
                         </p>
                         <button id="colorButton" class="mini-game__mob-btn">Играть!</button>
