--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                         <img class="game__img" src="images/1.png" alt="img">
                         <p class="game__btn">Игра № 1</p>
                         <h3 class="game__name">Угадай число</h3>
-                        <p class="game__desc">Попробуй угадать случайное число от 1 до 100.</p>
+                        <p class="game__desc">Попробуй угадать случайное число от 1 до 100.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis nobis corrupti neque quae asperiores inventore, nihil ab quibusdam nesciunt, minima unde commodi accusamus quod voluptatem libero rerum veniam animi sunt.
+                        </p>
                     </a></article>
 
                 <article class="game"><a href="#2">
